--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <!--filtres--> 
          <div class="filtre">
              <h3 class="titre_fitres" >Filtres</h3>
-
+          <div class="boutton">
              <div class="boutton_icone">
                <div class="icone_bleus">
                <i class="fas fa-money-bill-wave"></i>
                </div>
-               <a class="texte_bouton" href=""> Economique</a>       
+               <a class="texte_bouton" href=""> Economique</a>      
              </div> 
 
             
@@ -72,11 +72,13 @@
                 </div>
                 <a class="texte_bouton" href="">Animaux autorises</a>       
              </div> 
-
+           </div>
          </div>
        <!--soustire-->
        <div class="info">
+           <div class="icone_info_plasement" >
            <div class="icone_info"><i class="fas fa-info"></i></div>
+           </div>
            <p class="para_info">Plus de 500 logements sont disponibles dans cette ville</p>
        </div>  
     </header>
