--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <!--tete de page-->
+<!--tete de page-->
     <header>
         <div class="menu_logo">
                 <div class="logo"><img class="img_logo"  src="./asset/image/Reservia.svg" alt=""></div>
@@ -27,18 +27,18 @@
                 <div class="menu_3"><a class="bouton_2" href="">S'inscrire</a></div>
             </div>
         </div>
-    <!--titre-->    
+ <!--titre-->    
         <div class="titre">
             <h3>Trouverz votre Hebergement pour des vacances de reve</h3>
             <p class="soustitre" >En plein centre ville ou pleine nature</p> 
         </div>
-    <!--barre_de_recherche--> 
+<!--barre_de_recherche--> 
         <div class="recherche">
           <div class="point_recherche"><i class="fas fa-map-marker-alt" ></i></div>
           <input type="text" class="text_recherche" placeholder="Marseille,France">
           <button type="submit" class="recherche_bouton">Rechercher </button>
         </div> 
-    <!--filtres--> 
+<!--filtres--> 
          <div class="filtre">
              <h3 class="titre_fitres" >Filtres</h3>
           <div class="boutton">
@@ -74,7 +74,7 @@
              </div> 
            </div>
          </div>
-       <!--soustire-->
+<!--soustire-->
        <div class="info">
            <div class="icone_info_plasement" >
            <div class="icone_info"><i class="fas fa-info"></i></div>
@@ -82,6 +82,87 @@
            <p class="para_info">Plus de 500 logements sont disponibles dans cette ville</p>
        </div>  
     </header>
+<!--navigation-->
+<!--bloc-->
+   <nav>
+     <div class="bloc">
+<!--premier_bloc--> 
+        <div class="bloc_1">
+             <h3 class="bloc_titre">Hebergement a Marseille</h3>
+<!--cads_carre-->  
+        <div class="cards_alinement">
+             <button class="card_1">
+               <img class="image_1" src="./asset/image/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"  alt="photo Chambres d'hotes" >
+               <div class="container_1">
+               <h4><b>Hotel le soleil du matin </b></h4> 
+               <p>Nuit a partir de 128€</p> 
+               <div class="icone_etoile">
+              </div>  
+              </div> 
+            </button>
+
+            <button class="card_1">
+                <img class="image_1" src="./asset/image/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"  alt="photo Chambres d'hotes" >
+                <div class="container_1">
+                <h4><b>Hotel le soleil du matin </b></h4> 
+                <p>Nuit a partir de 128€</p> 
+                <div class="icone_etoile">
+               </div>  
+               </div> 
+            </button>
+
+            <button class="card_1">
+                <img class="image_1" src="./asset/image/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"  alt="photo Chambres d'hotes" >
+                <div class="container_1">
+                <h4><b>Hotel le soleil du matin </b></h4> 
+                <p>Nuit a partir de 128€</p> 
+                <div class="icone_etoile">
+               </div>  
+               </div> 
+            </button>
+        </div>
+<!--cads_carre_2--> 
+        <div class="cards_alinement">
+
+            <button class="card_1">
+                <img class="image_1" src="./asset/image/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"  alt="photo Chambres d'hotes" >
+                <div class="container_1">
+                <h4><b>Hotel le soleil du matin </b></h4> 
+                <p>Nuit a partir de 128€</p> 
+                <div class="icone_etoile">
+               </div>  
+               </div> 
+             </button>
+
+             <button class="card_1">
+                <img class="image_1" src="./asset/image/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"  alt="photo Chambres d'hotes" >
+                <div class="container_1">
+                <h4><b>Hotel le soleil du matin </b></h4> 
+                <p>Nuit a partir de 128€</p> 
+                <div class="icone_etoile">
+               </div>  
+               </div> 
+             </button>  
+             
+
+             <button class="card_1">
+                <img class="image_1" src="./asset/image/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"  alt="photo Chambres d'hotes" >
+                <div class="container_1">
+                <h4><b>Hotel le soleil du matin </b></h4> 
+                <p>Nuit a partir de 128€</p> 
+                <div class="icone_etoile">
+               </div>  
+               </div> 
+            </button>  
+          </div> 
+          <h3><a class="afiche" href="">Afffiche plus</a></h3> 
+        </div>
+<!--deuxime_bloc-->          
+          <div class="bloc_2">
+             <h3 class="bloc_titre" >Les plus populaires</h3>
+          </div>
+     </div>
+</nav>
 </body>
 
 </html>
