--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 <div class="dimention">
                <img class="image_1" src="./asset/image/marcus-loke-WQJvWU_HZFo-unsplash.jpg"  alt="photo Chambres d'hotes" >
                <div class="container_1">
-               <h4><b>Hotel le soleil du matin </b></h4> 
-               <p>Nuit a partir de 128€</p> 
+                <h4><b>Auberge la Cannebiere</b></h4> 
+                <p>Nuit a partir de 25€</p> 
                <div class="icone_etoile">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -115,8 +115,8 @@
                 <div class="dimention">
                <img class="image_1" src="./asset/image/fred-kleber-gTbaxaVLvsg-unsplash.jpg"  alt="photo Chambres d'hotes" >
                <div class="container_1">
-               <h4><b>Hotel le soleil du matin </b></h4> 
-               <p>Nuit a partir de 128€</p> 
+                <h4><b>Hotel du prot </b></h4> 
+                <p>Nuit a partir de 52€</p> 
                <div class="icone_etoile">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -132,8 +132,8 @@
                 <div class="dimention">
                <img class="image_1" src="./asset/image/reisetopia-B8WIgxA_PFU-unsplash.jpg"  alt="photo Chambres d'hotes" >
                <div class="container_1">
-               <h4><b>Hotel le soleil du matin </b></h4> 
-               <p>Nuit a partir de 128€</p> 
+                <h4><b>Hotel les mouettes </b></h4> 
+                <p>Nuit a partir de 76€</p> 
                <div class="icone_etoile">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -153,8 +153,8 @@
                 <div class="dimention">
                <img class="image_1" src="./asset/image/annie-spratt-Eg1qcIitAuA-unsplash.jpg"  alt="photo Chambres d'hotes" >
                <div class="container_1">
-               <h4><b>Hotel le soleil du matin </b></h4> 
-               <p>Nuit a partir de 128€</p> 
+                <h4><b>Hotel de la mer </b></h4> 
+                <p>Nuit a partir de 46€</p> 
                <div class="icone_etoile">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -172,8 +172,8 @@
                 <div class="dimention">
                <img class="image_1" src="./asset/image/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"  alt="photo Chambres d'hotes" >
                <div class="container_1">
-               <h4><b>Hotel le soleil du matin </b></h4> 
-               <p>Nuit a partir de 128€</p> 
+                <h4><b>Auberge le Panier</b></h4> 
+                <p>Nuit a partir de 23€</p> 
                <div class="icone_etoile">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
@@ -191,8 +191,8 @@
                 <div class="dimention">
                <img class="image_1" src="./asset/image/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"  alt="photo Chambres d'hotes" >
                <div class="container_1">
-               <h4><b>Hotel le soleil du matin </b></h4> 
-               <p>Nuit a partir de 128€</p> 
+                <h4><b>Hotel chez Amina </b></h4> 
+                <p>Nuit a partir de 96€</p> 
                <div class="icone_etoile">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
