nom_photo_activiter

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <div class="card_3_1"> 
                 <img class="image_3" src="./asset/image/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"  alt="photo Chambres d'hotes" >
                 <div class="container_3">
-                 <h4> <a class="texte_style"  href="">Hotel chez Amina</a></h4> 
+                 <h4> <a class="texte_style"  href="">Vieux Port</a></h4> 
                </div>  
             </div> 
          
@@ -297,7 +297,7 @@
             <div class="card_3_3"> 
                 <img class="image_3_2" src="./asset/image/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt="photo Chambres d'hotes" >
                 <div class="container_3">
-                 <h4> <a  class="texte_style" href="">Hotel chez Amina</a></h4> 
+                 <h4> <a  class="texte_style" href="">Fort de Pomégues</a></h4> 
                </div>  
             </div> 
 
@@ -306,7 +306,7 @@
             <div class="card_3_2"> 
                 <img class="image_3_1" src="./asset/image/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"  alt="photo Chambres d'hotes" >
                 <div class="container_3">
-                 <h4> <a class="texte_style"  href="">Hotel chez Amina</a></h4> 
+                 <h4> <a class="texte_style"  href="">Iles du Frioul</a></h4> 
                </div>  
             </div> 
         </div>
@@ -315,7 +315,7 @@
             <div class="card_3_1"> 
                 <img class="image_3" src="./asset/image/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"  alt="photo Chambres d'hotes" >
                 <div class="container_3">
-                 <h4> <a class="texte_style"  href="">Hotel chez Amina</a></h4> 
+                 <h4> <a class="texte_style"  href="">Parc National des Calanques</a></h4> 
                </div>  
             </div> 
 
@@ -324,7 +324,7 @@
             <div class="card_3_2"> 
                     <img class="image_3_1" src="./asset/image/florian-wehde-xW9e8gdotxI-unsplash.jpg"  alt="photo Chambres d'hotes" >
                     <div class="container_3">
-                     <h4> <a class="texte_style"  href="">Hotel chez Amina</a></h4> 
+                     <h4> <a class="texte_style"  href="">Notre-Dame-de-la-Garde</a></h4> 
                    </div>  
             </div> 
     
@@ -333,7 +333,7 @@
             <div class="card_3_3"> 
                     <img class="image_3_2" src="./asset/image/lena-paulin-wH2-EJoDcV0-unsplash.jpg"  alt="photo Chambres d'hotes" >
                     <div class="container_3">
-                     <h4> <a class="texte_style" href="">Hotel chez Amina</a></h4> 
+                     <h4> <a class="texte_style" href="">Parc Longchamp</a></h4> 
                    </div>  
               </div> 
         </div> 
