possition_barre_de_recheche_coriger

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
      
 <!--barre_de_recherche--> 
         <div class="recherche">
-          <div class="point_recherche"><i class="fas fa-map-marker-alt" ></i></div>
+          <div class="point_recherche"><i id="GPS" class="fas fa-map-marker-alt" ></i></div>
           <div class="border">
           <input type="text" class="text_recherche" placeholder="Marseille,France">
           <button type="submit" class="recherche_bouton_1"><i class="fas fa-search"></i> </button>
