--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
        <div class="marge"> 
           <div class="bloc_2">
             
-             <div class="populair"><h3 class= >Les plus populaires</h3>
+             <div class="populair"><h3>Les plus populaires</h3>
                 <div class="icone_graphique" ><i class="fas fa-chart-line"></i>
                 </div>
               </div>
