--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
         <div class="groupe_card" >
 
             <div class="card_3_3"> 
-                <img class="image_3_2" src="./asset/image/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt="photo Chambres d'hotes" >
+                <img class="image_3_2" src=""  alt="photo Chambres d'hotes" >
                 <div class="container_3">
                  <p> <a  class="texte_style" href="">Fort de Pomégues</a></p> 
                </div>  
@@ -327,7 +327,7 @@
 
 
             <div class="card_3_2"> 
-                <img class="image_3_1" src="./asset/image/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"  alt="photo Chambres d'hotes" >
+                <img class="image_3_1" src=""  alt="photo Chambres d'hotes" >
                 <div class="container_3">
                  <p> <a class="texte_style"  href="">Iles du Frioul</a></p> 
                </div>  
