--- a/index.html
+++ b/index.html
@@ -317,20 +317,12 @@
 
         <div class="groupe_card" >
 
-            <div class="card_3_3"> 
-                <img class="image_3_2" src=""  alt="photo Chambres d'hotes" >
-                <div class="container_3">
-                 <p> <a  class="texte_style" href="">Fort de Pomégues</a></p> 
-               </div>  
-            </div> 
+            
 
 
 
-            <div class="card_3_2"> 
-                <img class="image_3_1" src=""  alt="photo Chambres d'hotes" >
-                <div class="container_3">
-                 <p> <a class="texte_style"  href="">Iles du Frioul</a></p> 
-               </div>  
+            <div class="card_3_2_1"> 
+               
             </div> 
         </div>
 
