--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
            <div class="border">
 
            <input type="text" class="text_recherche" placeholder="Marseille,France">
-           <button type="submit" class="recherche_bouton_1"><i class="fas fa-search"></i></button>
+           <button type="submit" class="recherche_bouton_loup"><i class="fas fa-search"></i></button>
            </div>
           
-           <input type="text" class="text_recherche_1" placeholder="Marseille,France">
+           <input type="text" class="text_recherche_loup" placeholder="Marseille,France">
            <button type="submit" class="recherche_bouton">  Recherche </button>
          
 
