--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
                   <img class="image_ac_petite" src="./image/paul-hermann-QFTrLdQIRhI-unsplash.jpg"  alt="photo Chambres d'hotes" >
 
                   <div class="container_ac">
-                    <p><a class="texte_style"  href="#">Eort de Pomégues</a></p> 
+                    <p><a class="texte_style"  href="#">foret de Pomégues</a></p> 
                 </div>  
           </div> 
 
